run formatter in fork - run on java 16+ without --add-exports flags